added the character name and hp to the html page, corrected the js file to account for the div that wraps the 2 paragraphs and image, adjusted the css a little

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,33 @@
 .container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: column;
+}
+
+h1 {
 
 }
 
 #select {
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: row;
+	align-content: flex-start;
 
 }
 
 #your-character {
-
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: row;
+	align-content: flex-start;
 }
 
 #enemies {
-
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: row;
+	align-content: flex-start;
 }
 
 #options {
@@ -19,5 +35,12 @@
 }
 
 #defender {
-	
+	display: flex;
+	flex-wrap: wrap;
+	flex-flow: column;
+	align-content: flex-start;
+}
+
+.character {
+	margin-right: 30px;
 }
