--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,21 @@
+body {
+	background-image: url('../images/background-edit1.jpg');
+	background-size: cover;
+}
+
 .container {
 	margin-left: 3px;
 	line-height: 1.5;
+	font-family: 'Poller One', cursive;
 }
 
 h1 {
+	margin-left: 70%;
+	font-size: 200%;
+}
 
+h2 {
+	font-size: 150%;
 }
 
 #select {
@@ -46,10 +57,11 @@ h1 {
 .character {
 	margin-right: 30px;
 	border: 2px green solid;
-	width: 150px;
-	height: 170px;
+	width: 170px;
+	height: 185px;
 	text-align: center;
 	overflow: hidden;
+	background-color: white;
 }
 
 .character img {
